Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumObjUndefinedField.quorum
class Main
    Number v = undefined
    action Main
        Test(v)
    end

    action Test(Number var)
        if var = undefined
            output "passed"
        end
    end
end
