Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjBooleanWrapped.quorum
class main
    action Main
        Number num = "true"
    end
end